# Inkscape-Ollama-extension

./: .gitignore  LICENSE  README.md  pyproject.toml
inkscape_ollama/: __init__.py  actions_json.py  apply_actions.py  config.py  context_builder.py  inkscape_gpt.inx  inkscape_gpt.py  inkscape_gpt_review.inx  inkscape_gpt_review.py  inkscape_gpt_settings.inx  inkscape_gpt_settings.py  inkscape_gpt_test_connection.inx  inkscape_gpt_test_connection.py  ollama_client.py  system_prompt.py
inkscape_ollama/prompts/: action_schema.txt  system_prompt_rules.txt
scripts/: install.sh  test_from_terminal.sh
tests/: test_extract_actions_json.py  test_ollama_connection.py  test_ollama_context.py  test_system_prompt.py
